--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AudioPlayer"
-	android:requestLegacyExternalStorage="true"
-        tools:targetApi="31">
+	    android:requestLegacyExternalStorage="true">
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -38,5 +37,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
