--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,7 @@
-#Mon Mar 31 23:21:47 CST 2025
+#Sat Apr 26 23:11:42 CST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-#distributionUrl=https\://services.gradle.org/distributions/gradle-8.13-bin.zip
-distributionUrl=https://mirrors.cloud.tencent.com/gradle/gradle-8.13-all.zip
+#distributionUrl=https\://services.gradle.org/distributions/gradle-9.0-milestone-3-bin.zip
+distributionUrl=https://mirrors.cloud.tencent.com/gradle/gradle-8.14-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
